updating kiva nbs for prod

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query execution per day"
+    "## Queries executed per day - successes, failures, credits"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Failures by user by day"
+    "## Query failures by user by day"
    ]
   },
   {
@@ -232,7 +232,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Failure time series by user\n",
     "fig = px.bar(df_fail_user, x=\"day\", y=\"n_fail\", color=\"user_name\", title=\"Number failed by user\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fail_user.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top n users having most failed queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=10\n",
+    "df_top_failing_users = df_fail_user.groupby('user_name')['n_fail'].sum().reset_index()\n",
+    "df_top_failing_users.sort_values(\"n_fail\", ascending=False, inplace=True)\n",
+    "df_top_failing_users.reset_index(drop=True,inplace=True)\n",
+    "df_top_n_failing_users = df_top_failing_users.iloc[0:n-1]\n",
+    "df_top_n_failing_users.loc[len(df_top_n_failing_users.index)] = ['Others', df_top_failing_users.iloc[n-1:].sum().values[0]] \n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Pie(labels=df_top_n_failing_users['user_name'].tolist(), values=df_top_n_failing_users['n_fail'].tolist(),\n",
+    "                     rotation=-30, marker_colors=color_scheme, hole=0.3))\n",
     "fig.show()"
    ]
   },
@@ -264,6 +299,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top n warehouses having most failed queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_top_failing_wh = df_fail_wh.groupby([\"warehouse_name\"])[\"n_fail\"].sum().reset_index()\n",
+    "df_top_failing_wh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Pie(labels=df_top_failing_wh['warehouse_name'].tolist(), values=df_top_failing_wh['n_fail'].tolist(),\n",
+    "                     rotation=-30, marker_colors=color_scheme, hole=0.3))\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query details of failed queries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -271,10 +342,10 @@
    "source": [
     "## 17th Aug DEV_WH execution_status fail anomaly\n",
     "df=qqlib.get_queries(start_date=\"2022-08-17\",end_date=\"2022-08-18\",wh=\"DEV_WH\",es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.append_query_hash(df)\n",
-    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).reset_index()\n",
-    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).reset_index().sort_values('execution_status', ascending=False)\n",
-    "df_fails.head()"
+    "df_unique = qqlib.get_unique_queries(df)\n",
+    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
+    "df_unique.reset_index(inplace=True)\n",
+    "df_unique.head()"
    ]
   },
   {
@@ -285,10 +356,10 @@
    "source": [
     "## 3rd Oct DEV_WH execution_status fail anomaly\n",
     "df=qqlib.get_queries(start_date=\"2022-10-03\",end_date=\"2022-10-04\",wh=\"DEV_WH\",es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.append_query_hash(df)\n",
-    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
-    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
-    "df_fails.head()"
+    "df_unique = qqlib.get_unique_queries(df)\n",
+    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
+    "df_unique.reset_index(inplace=True)\n",
+    "df_unique.head()"
    ]
   },
   {
@@ -299,10 +370,10 @@
    "source": [
     "## 11th Oct Unassigned execution_status fail anomaly\n",
     "df=qqlib.get_queries(start_date=\"2022-10-11\",end_date=\"2022-10-12\",es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.append_query_hash(df)\n",
-    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
-    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
-    "df_fails.head()"
+    "df_unique = qqlib.get_unique_queries(df)\n",
+    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
+    "df_unique.reset_index(inplace=True)\n",
+    "df_unique.head()"
    ]
   },
   {
@@ -427,10 +498,10 @@
    "source": [
     "## all failures for a user between start and end date\n",
     "df=qqlib.get_queries(start_date=sdate,end_date=edate,user=user,es=\"FAIL\", n=1500)\n",
-    "df_unique = qqlib.append_query_hash(df)\n",
-    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
-    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
-    "df_fails.head()"
+    "df_unique = qqlib.get_unique_queries(df)\n",
+    "df_unique.sort_values('execution_status', inplace=True, ascending=False)\n",
+    "df_unique.reset_index(inplace=True)\n",
+    "df_unique.head()"
    ]
   },
   {
@@ -524,27 +595,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get n queries given start_date, and end_date, or user or warehouse, execution_status"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Find the queries given the conditions - with options to omit certain constraints\n",
-    "df = qqlib.get_queries(start_date='2022-10-11',end_date='2022-10-12',es='FAIL', n=1500)\n",
+    "sdate = '2022-10-11'\n",
+    "edate = '2022-10-12'\n",
+    "es = 'FAIL'\n",
+    "n = 1500\n",
+    "wh = 'Unassigned'\n",
+    "df = qqlib.get_queries(start_date=sdate,end_date=edate,es=es, n=n)\n",
     "df = df.fillna('Unassigned')\n",
-    "# df.head()\n",
-    "df = df[df['warehouse_name']=='Unassigned']\n",
-    "df_unique = qqlib.append_query_hash(df)\n",
-    "df_unique_group = df_unique.groupby(['query_hash','query_text']).agg({'execution_status':'count'})\n",
-    "df_fails = df.groupby(['query_hash','query_text']).agg({'execution_status':'count'}).sort_values('execution_status', ascending=False).reset_index()\n",
-    "df_fails.head(10)"
+    "df = df[df['warehouse_name']==wh]\n",
+    "df_unique = qqlib.get_unique_queries(df)\n",
+    "df_fails = df_unique.sort_values('execution_status', ascending=False).reset_index()\n",
+    "df_fails.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get most inefficient query by metric - credits, total time elapsed etc."
+    "## Get most inefficient query by metric - credits, total time elapsed etc. as query_id and details"
    ]
   },
   {
@@ -559,14 +639,47 @@
     "# metric = 'bytes_spilled_to_remote_storage' -- division by 0\n",
     "# metric = 'percentage_partitions_scanned' -- division by 0\n",
     "# metric = 'partitions_total'\n",
-    "# metric = 'compilation_time_sec' -- division by 0\n",
+    "# metric = 'compilation_time_sec' #-- division by 0\n",
     "# metric = 'execution_time_sec'\n",
     "# metric = 'queued_provisioning_time_sec' -- division by 0\n",
     "# metric = 'queued_repair_time_sec' -- division by 0\n",
     "# metric = 'queued_overload_time_sec' -- division by 0\n",
     "# metric = 'list_external_files_time_sec' -- division by 0\n",
     "# metric = 'total_time_elapsed_sec'\n",
-    "# metric = 'credits'\n",
+    "metric = 'credits'\n",
+    "sdate = \"2022-08-12\"\n",
+    "edate = \"2022-10-12\"\n",
+    "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get most inefficient query by metric - credits, total time elapsed etc. with details and grouped by query text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# metric = 'bytes_scanned'\n",
+    "# metric = 'percentage_scanned_from_cache'\n",
+    "# metric = 'bytes_spilled_to_local_storage'\n",
+    "# metric = 'bytes_spilled_to_remote_storage' -- division by 0\n",
+    "# metric = 'percentage_partitions_scanned' -- division by 0\n",
+    "# metric = 'partitions_total'\n",
+    "# metric = 'compilation_time_sec' #-- division by 0\n",
+    "# metric = 'execution_time_sec'\n",
+    "# metric = 'queued_provisioning_time_sec' -- division by 0\n",
+    "# metric = 'queued_repair_time_sec' -- division by 0\n",
+    "# metric = 'queued_overload_time_sec' -- division by 0\n",
+    "# metric = 'list_external_files_time_sec' -- division by 0\n",
+    "# metric = 'total_time_elapsed_sec'\n",
+    "metric = 'credits'\n",
     "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
     "df.head()"
    ]
@@ -577,8 +690,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unique = qqlib.get_unique_queries(df,metric)\n",
-    "df_unique"
+    "df_unique = qqlib.get_unique_queries_with_metrics_ordered(df, metric)\n",
+    "df_unique.reset_index(inplace=True)\n",
+    "df_unique.head()"
    ]
   },
   {
@@ -587,84 +701,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df[df['query_hash']=='6ef334ed61427031d52acf53a055ab57']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Average is not there and total credits are different\n",
-    "metric = 'credits'\n",
-    "df = qqlib.n_inefficient_queries(sdate,edate,250,metric=metric)\n",
-    "df = qqlib.get_unique_queries(df,metric)\n",
-    "df.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "n = 20\n",
     "trace1 = go.Bar(\n",
-    "        x = df['query_hash'],\n",
-    "        y = df['n_success'],\n",
+    "        x = df_unique.iloc[0:n]['query_hash'],\n",
+    "        y = df_unique.iloc[0:n]['n_success'],\n",
     "        name=\"Execution success count\",\n",
     "    )\n",
     "\n",
     "trace2 = go.Bar(\n",
-    "        x = df['query_hash'],\n",
-    "        y = df['n_fail'],\n",
+    "        x = df_unique.iloc[0:n]['query_hash'],\n",
+    "        y = df_unique.iloc[0:n]['n_fail'],\n",
     "        name=\"Execution fail count\",\n",
     "    )\n",
     "\n",
     "trace3  = go.Scatter(\n",
     "        mode='markers+lines',\n",
-    "        x = df['query_hash'],\n",
-    "        y = df['credits'],\n",
-    "        name=\"Credits\",\n",
+    "        x = df_unique.iloc[0:n]['query_hash'],\n",
+    "        y = df_unique.iloc[0:n][metric],\n",
+    "        name=metric,\n",
     "        yaxis='y2',\n",
     "        line=dict(color='black'),\n",
     "    )\n",
@@ -678,7 +732,7 @@
     "        showgrid=False,\n",
     "    ),\n",
     "     yaxis2=dict(\n",
-    "        title=\"Number of times ran\", \n",
+    "        title=metric, \n",
     "        overlaying=\"y\",\n",
     "        side=\"right\",\n",
     "        showgrid=False,\n",
@@ -689,7 +743,7 @@
     "    legend=dict(\n",
     "        yanchor=\"top\",\n",
     "        y=0.99,\n",
-    "        xanchor=\"left\",\n",
+    "        xanchor=\"right\",\n",
     "        x=0.99\n",
     "    ),\n",
     "    barmode=\"stack\"\n",
@@ -704,82 +758,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.loc[0].query_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Now plot these grouped queries as success and fail bar charts and show what numbers are different between success and fail"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Queries succeeded / failed by hash in an analysis period\n",
-    "## Individual query inefficient by a metric\n",
-    "## Query hashes inefficient by metric"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -802,205 +780,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Plot most expensive queries by query id - showing both success, failures credit consumed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Plot this by hash"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Most expensive queries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qqlib.n_inefficient_queries(sdate,edate,10,metric='credits')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qqlib.n_expensive_queries(sdate,edate,200)\n",
-    "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
-    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
-    "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_execution_status = df.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
-    "df_by_execution_status"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Most expensive queries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qqlib.n_inefficient_queries(sdate,edate,200,metric='credits')\n",
-    "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
-    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
-    "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_execution_status = df.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
-    "df_by_execution_status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Naive most expensive queries\n",
-    "n = 100\n",
-    "trace1 = go.Scatter(\n",
-    "        mode='lines+markers',\n",
-    "        x = df['query_id'][0:n],\n",
-    "        y = df['credits'][0:n],\n",
-    "        name=\"Credits\",\n",
-    "        marker=dict(\n",
-    "            size=10,\n",
-    "            color=(df[\"execution_fail\"] > 0 ).astype(int).astype('int'),\n",
-    "            colorscale=[[0, 'green'], [1, 'red']]\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "data = [trace1]\n",
-    "\n",
-    "layout = go.Layout(\n",
-    "    title_text='Naive Most expensive queries',\n",
-    "    yaxis=dict(\n",
-    "        title=\"Credits\"\n",
-    "    ),\n",
-    "    xaxis=dict(\n",
-    "        title=\"Query ID\"\n",
-    "    )\n",
-    ")\n",
-    "fig = go.Figure(data=data, layout=layout)\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_execution_status = df.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
-    "df_by_execution_status"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -1022,7 +801,7 @@
    "outputs": [],
    "source": [
     "##TODO: Temporal distribution of expensive queries by warehouse\n",
-    "df_hash = get_unique_query(df)\n",
+    "df_hash = qqlib.get_unique_query(df)\n",
     "# df_hash.head()"
    ]
   },
