--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Adding system path\n",
-    "import sys, pathlib\n",
+    "import sys, pathlib, os\n",
     "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
     "# sys.path"
    ]
@@ -41,15 +41,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up displays\n",
-    "from IPython.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "from dash import Dash,html,dcc,Input,Output\n",
-    "app = Dash(__name__)\n",
+    "## Setup connection to DWH\n",
+    "customer = 'KIVA'\n",
+    "schema = 'KIVA_PROD.OPTIML'\n",
+    "# customer = 'OPTIML'\n",
+    "# schema = 'KIV'\n",
+    "username = customer + '_USERNAME'\n",
+    "password = customer + '_PASSWORD'\n",
+    "account = customer + '_ACCOUNT'\n",
+    "\n",
+    "user = os.getenv(username)\n",
+    "password = os.getenv(password)\n",
+    "account = os.getenv(account)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Setup pandas\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
+    "## Setup Plotly\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -65,16 +82,17 @@
    "source": [
     "# Initialize connection to Snowflake and set analysis date\n",
     "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# Initialize local environment\n",
-    "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "connection = SnowflakeConnConfig(username=user,password=password,accountname=account).create_connection()\n",
+    "\n",
     "# Initialize query library\n",
     "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
-    "cqlib = CostProfile(connection, 'KIV', cache_dir)\n",
+    "cqlib = CostProfile(connection, schema)\n",
     "\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'"
+    "# Initialize dates\n",
+    "import datetime \n",
+    "edate = datetime.date.today()\n",
+    "sdate = edate - datetime.timedelta(days=7)\n",
+    "print(sdate, edate)"
    ]
   },
   {
@@ -125,6 +143,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cqlib.cost_of_storage_ts(sdate, edate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = cqlib.total_cost_breakdown_ts(sdate, edate)\n",
     "df = df.fillna('Unassigned')\n",
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
@@ -134,13 +161,6 @@
     "print('---------------------------------------------------')\n",
     "print(tabulate(df_by_usage_category, headers='keys', tablefmt='rounded_outline', showindex=False))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
