--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -42,10 +42,10 @@
    "outputs": [],
    "source": [
     "## Setup connection to DWH\n",
-    "customer = 'KIVA'\n",
-    "schema = 'KIVA_PROD.OPTIML'\n",
-    "# customer = 'OPTIML'\n",
-    "# schema = 'KIV'\n",
+    "# customer = 'KIVA'\n",
+    "# schema = 'KIVA_PROD.OPTIML'\n",
+    "customer = 'OPTIML'\n",
+    "schema = 'KIV'\n",
     "username = customer + '_USERNAME'\n",
     "password = customer + '_PASSWORD'\n",
     "account = customer + '_ACCOUNT'\n",
@@ -90,8 +90,10 @@
     "\n",
     "# Initialize dates\n",
     "import datetime \n",
-    "edate = datetime.date.today()\n",
-    "sdate = edate - datetime.timedelta(days=7)\n",
+    "# edate = datetime.date.today()\n",
+    "# sdate = edate - datetime.timedelta(days=7)\n",
+    "edate = '2022-10-12'\n",
+    "sdate = '2022-10-10'\n",
     "print(sdate, edate)"
    ]
   },
@@ -143,7 +145,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cqlib.cost_of_storage_ts(sdate, edate)"
+    "df = cqlib.cost_of_storage_ts(sdate, edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = cqlib.cost_of_storage_ts_new(sdate, edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from calendar import monthrange\n",
+    "monthrange(df['usage_date'][0].year, df['usage_date'][0].month)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx,row in df.iterrows():\n",
+    "    row['dollars_used'] = row['dollars_used']/monthrange(row['usage_date'].year, row['usage_date'].month)[1] \n",
+    "    print(row['dollars_used'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['dollars_used'] = df.apply(lambda row: row['dollars_used']/float(monthrange(row['usage_date'].year, row['usage_date'].month)[1]), axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthrange(df['usage_date'].year, df['usage_date'].month)[1] "
    ]
   },
   {
