updating query profile to new connection and schema object

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -44,15 +44,17 @@
     "## Setup connection to DWH\n",
     "# customer = 'KIVA'\n",
     "# schema = 'KIVA_PROD.OPTIML'\n",
-    "customer = 'OPTIML'\n",
-    "schema = 'KIV.ACCOUNT_USAGE'\n",
+    "customer = 'OPTIML' # Use this for testing\n",
+    "schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
     "username = customer + '_USERNAME'\n",
     "password = customer + '_PASSWORD'\n",
     "account = customer + '_ACCOUNT'\n",
+    "warehouse = customer + '_WAREHOUSE'\n",
     "\n",
     "user = os.getenv(username)\n",
     "password = os.getenv(password)\n",
-    "account = os.getenv(account)"
+    "account = os.getenv(account)\n",
+    "warehouse = os.getenv(warehouse)"
    ]
   },
   {
@@ -83,7 +85,7 @@
    "source": [
     "# Initialize connection to Snowflake and set analysis date\n",
     "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(username=user,password=password,accountname=account).create_connection()\n",
+    "connection = SnowflakeConnConfig(username=user,password=password,accountname=account,w).create_connection()\n",
     "\n",
     "# Initialize query library\n",
     "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
@@ -634,24 +636,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# df_by_category_ts = df.groupby(['category_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category_ts, x=\"hourly_start_time\", y=\"dollars\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
-    "fig.update_layout(\n",
-    "    title={\n",
-    "        'text': \"Timeseries of cost by usage category\",\n",
-    "        'y':0.95,\n",
-    "        'x':0.5,\n",
-    "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'},\n",
-    "    xaxis_title=\"Hourly start time (UTC)\",\n",
-    "    yaxis_title=\"US Dollars\"\n",
-    ")\n",
-    "fig.show()"
+    "## Resource monitoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total credit usage for the account"
    ]
   },
   {
@@ -660,9 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_compute = df_by_category_ts[df_by_category_ts[\"category_name\"] == \"Compute\"][[\"hourly_start_time\", \"credits\"]].reset_index(drop=True)\n",
-    "df_compute.set_index(\"hourly_start_time\", inplace=True)\n",
-    "df_compute"
+    "## Based on rolling previous 30 days"
    ]
   },
   {
@@ -670,7 +663,101 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "training_length = 30\n",
+    "training_start = sdate - timedelta(training_length+1)\n",
+    "training_end = sdate - timedelta(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_compute = cqlib.cost_of_compute_ts(training_start,training_end)\n",
+    "# df_compute_total = df_compute.groupby([\"hourly_start_time\"]).sum(['credits']) \n",
+    "# df_compute_total.reset_index(inplace=True)\n",
+    "# df_compute_total[\"hourly_start_time\"] = pd.to_datetime(df_compute_total[\"hourly_start_time\"])#, utc=True)\n",
+    "# df_compute_total[\"date\"] = df_compute_total[\"hourly_start_time\"].dt.date\n",
+    "# df_compute_total[\"time\"] = df_compute_total[\"hourly_start_time\"].dt.time\n",
+    "# df_compute_total = df_compute_total.groupby([\"time\",\"date\"]).sum()\n",
+    "# df_compute_total.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_resource_monitor(df):\n",
+    "    df = df.groupby([\"hourly_start_time\"]).sum(['credits']) \n",
+    "    df.reset_index(inplace=True)\n",
+    "    df[\"hourly_start_time\"] = pd.to_datetime(df[\"hourly_start_time\"])#, utc=True)\n",
+    "#     df[\"date\"] = df[\"hourly_start_time\"].dt.date\n",
+    "#     df[\"time\"] = df[\"hourly_start_time\"].dt.time\n",
+    "#     df = df.groupby([\"time\",\"date\"]).sum()\n",
+    "#     df.reset_index(inplace=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = cqlib.cost_of_compute_ts(training_start,training_end)\n",
+    "df = get_resource_monitor(df)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval = \"day\"\n",
+    "# df_day = df.groupby(df.hourly_start_time.dt.interval)['credits'].sum()\n",
+    "df.groupby(pd.Grouper(key='hourly_start_time', axis=0, \n",
+    "                      freq='M', sort=True)).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_compute_stats = df_compute_total.groupby(\"time\").agg({'credits':['mean', 'std']})\n",
+    "df_compute_stats.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_compute_stats.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Bar(\n",
+    "    name='Control',\n",
+    "    x=df_compute_stats[\"time\"], y=df_compute_stats[\"credits\"][\"mean\"],\n",
+    "    error_y=dict(type='data', array=df_compute_stats[\"credits\"][\"std\"])\n",
+    "))"
+   ]
   },
   {
    "cell_type": "code",
