--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Adding system path\n",
-    "import sys, pathlib\n",
+    "import sys, pathlib, os\n",
     "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
     "# sys.path"
    ]
@@ -41,10 +41,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up displays\n",
-    "from IPython.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "## Setup connection to DWH\n",
+    "# customer = 'KIVA'\n",
+    "# schema = 'KIVA_PROD.OPTIML'\n",
+    "customer = 'OPTIML' # Use this for testing\n",
+    "schema = 'KIV.ACCOUNT_USAGE' # Use this for testing\n",
+    "username = customer + '_USERNAME'\n",
+    "password = customer + '_PASSWORD'\n",
+    "account = customer + '_ACCOUNT'\n",
     "\n",
+    "user = os.getenv(username)\n",
+    "password = os.getenv(password)\n",
+    "account = os.getenv(account)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Setup pandas\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
@@ -66,18 +83,26 @@
    "source": [
     "# Initialize connection to Snowflake and set analysis date\n",
     "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# Initialize local environment\n",
-    "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "# connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
+    "connection = SnowflakeConnConfig(username=user,password=password,accountname=account).create_connection()\n",
+    "\n",
     "# Initialize query library\n",
     "from optiml.backend.query_profile import QueryProfile\n",
     "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
-    "qqlib = QueryProfile(connection, 'KIV', cache_dir)\n",
-    "cqlib = CostProfile(connection, 'KIV', cache_dir)\n",
-    "# Initialize analysis dates\n",
-    "sdate = \"2022-08-12\"\n",
-    "edate = \"2022-10-12\""
+    "qqlib = QueryProfile(connection, schema)\n",
+    "cqlib = CostProfile(connection, schema)\n",
+    "\n",
+    "# Initialize dates\n",
+    "import datetime \n",
+    "# edate = datetime.date.today() - datetime.timedelta(days=1)\n",
+    "# sdate = edate - datetime.timedelta(days=8)\n",
+    "# edate = str(edate)\n",
+    "# sdate = str(sdate)\n",
+    "edate = '2022-10-12'\n",
+    "sdate = '2022-10-05'\n",
+    "print('Customer:', customer)\n",
+    "print('Schema:', schema)\n",
+    "print(str(sdate), str(edate))"
    ]
   },
   {
@@ -97,22 +122,6 @@
    "metadata": {},
    "source": [
     "# Query Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analysis setup\n",
-    "<div class=\"alert alert-warning\">\n",
-    "\n",
-    "* Analysis date range: '2022-09-12' to '2022-10-12': last rolling month in the data we collected.\n",
-    "\n",
-    "* Type of Snowflake account: Standard Edition\n",
-    "\n",
-    "* Credit to dollar conversion: `$`2 per credit\n",
-    "\n",
-    "</div>"
    ]
   },
   {
