--- a/notebooks/kiva/user_analysis.ipynb
+++ b/notebooks/kiva/user_analysis.ipynb
@@ -485,7 +485,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +503,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
