--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -683,7 +683,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -697,11 +697,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "6a7586f99e29171620915994645051fa6e3f480418379b3a312a7ffa6c2b1055"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   },
   "widgets": {
