--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -2042,7 +2042,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
