--- a/notebooks/kiva/query_analysis_v2.ipynb
+++ b/notebooks/kiva/query_analysis_v2.ipynb
@@ -527,12 +527,19 @@
     "print('----------------------------------------------')\n",
     "print(tabulate(df[[\"query_hash\", \"query_text\"]], headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -546,11 +553,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "dbda9aecaca418270926331227182ba4e090a9965f197bf8a1e0197df53563ab"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
