--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -219,7 +219,12 @@
     "## 1) Total for a week \n",
     "## 2) For each day based on historic patterns\n",
     "df_by_category_ts = df.groupby(['category_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category_ts, x=\"hourly_start_time\", y=\"dollars\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
+    "fig = px.area(df_by_category_ts, \\\n",
+    "            x=\"hourly_start_time\",\\\n",
+    "            y=\"dollars\", \\\n",
+    "            color=\"category_name\",\\\n",
+    "            color_discrete_sequence=color_scheme,\\\n",
+    "            markers=True)\n",
     "fig.update_layout(\n",
     "    title={\n",
     "        'text': \"Timeseries of cost by usage category\",\n",
@@ -229,38 +234,9 @@
     "        'yanchor': 'top'},\n",
     "    xaxis_title=\"Hourly start time (UTC)\",\n",
     "    yaxis_title=\"US Dollars\"\n",
+    "    \n",
     ")\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_compute = df_by_category_ts[df_by_category_ts[\"category_name\"] == \"Compute\"].round(2)\n",
-    "# avg_consumption = df_compute.mean().round(2)\n",
-    "# max_consumption = df_compute.loc[df_compute['credits'].idxmax()]\n",
-    "# max_consumption.drop(\"category_name\", inplace=True)\n",
-    "# min_consumption = df_compute.loc[df_compute['credits'].idxmin()]\n",
-    "# min_consumption.drop(\"category_name\", inplace=True)\n",
-    "\n",
-    "# print('Avg. hourly consumption:')\n",
-    "# print('-----------------')\n",
-    "# print(avg_consumption)\n",
-    "\n",
-    "# print('')\n",
-    "\n",
-    "# print('Max. hourly consumption:')\n",
-    "# print('-----------------')\n",
-    "# print(max_consumption)\n",
-    "\n",
-    "# print('')\n",
-    "\n",
-    "# print('Min. hourly consumption:')\n",
-    "# print('-----------------')\n",
-    "# print(min_consumption)"
    ]
   },
   {
@@ -381,7 +357,8 @@
     "              x=\"hourly_start_time\",\\\n",
     "              y=\"approximate_credits\",\\\n",
     "              color=\"user_name\",\\\n",
-    "              color_discrete_sequence=color_scheme)\n",
+    "              color_discrete_sequence=color_scheme,\\\n",
+    "            markers=True)\n",
     "fig.update_layout(\n",
     "    title={\n",
     "        'text': \"Timeseries of cost by user (except low usage users)\",\n",
@@ -496,7 +473,7 @@
    "source": [
     "## Plot timeseries\n",
     "df_by_wh_ts = df.groupby(['warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
+    "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme,markers=True)\n",
     "fig.update_layout(\n",
     "    title={\n",
     "        'text': \"Timeseries of cost by warehouse\",\n",
@@ -620,6 +597,135 @@
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resource monitoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Resource Monitors for the dataware house based on data from this week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "TRAINING_LENGTH = 30\n",
+    "training_start = sdate - timedelta(TRAINING_LENGTH + 1)\n",
+    "training_end = sdate - timedelta(1)\n",
+    "df_compute = cqlib.cost_of_compute_ts(training_start, training_end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_wh, resource_monitor = cqlib.get_resource_monitor_values(df_compute)\n",
+    "resource_monitor_queries = []\n",
+    "for idx, wh_name in enumerate(resource_monitor[\"warehouse_name\"].unique()):\n",
+    "    resource_monitor_name = resource_monitor.loc[idx][\"warehouse_name\"] + '_RESOURCE_MONITOR'\n",
+    "    credit_quota = resource_monitor.loc[idx][\"credits_three_sigma_plus\"]\n",
+    "    start_timestamp_ltz = \"YYYY-MM-DD HH:MM:SS PST\"\n",
+    "    periodicity = \"DAILY\"\n",
+    "    percentage_of_monitor=100\n",
+    "    action=\"NOTIFY\"\n",
+    "    warehouse_name=resource_monitor.loc[idx][\"warehouse_name\"]\n",
+    "    resource_monitor_queries.append(cqlib.generate_resource_monitor_sql(resource_monitor_name,\\\n",
+    "                              credit_quota,\\\n",
+    "                              periodicity,\\\n",
+    "                              start_timestamp_ltz,\\\n",
+    "                              percentage_of_monitor,\\\n",
+    "                              action,\\\n",
+    "                              warehouse_name))\n",
+    "\n",
+    "print(\"Query templates for you to generate resource monitor for this week\")\n",
+    "for res_mon_q in resource_monitor_queries:\n",
+    "    print(res_mon_q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Runbook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "* If the resource monitor did not send a notification last week and the new resource monitor proposed is within 10% of previous monitor - dont update the resource monitor\n",
+    "\n",
+    "* If the resource monitor sent a notification last week due to an unexplained usage that cannot be attributed to legitimate use continue to debug and dont change the resource monitor\n",
+    "    \n",
+    "* If the resource monitor sent a notification last week that can be attributed to legitimate use update the resource monitor\n",
+    "    \n",
+    "* If the new resource monitor values are >10% over last week's values update the resource monitor\n",
+    "    \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -765,147 +871,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Resource monitoring"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Runbook"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "* If the resource monitor did not send a notification last week and the new resource monitor proposed is within 10% of previous monitor - dont update the resource monitor\n",
-    "\n",
-    "* If the resource monitor sent a notification last week due to an unexplained usage that cannot be attributed to legitimate use continue to debug and dont change the resource monitor\n",
-    "    \n",
-    "* If the resource monitor sent a notification last week that can be attributed to legitimate use update the resource monitor\n",
-    "    \n",
-    "* If the new resource monitor values are >10% over last week's values update the resource monitor\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import textwrap as tw\n",
-    "def generate_resource_monitor_sql(resource_monitor_name=\"monitor_1\",\\\n",
-    "                              credit_quota=10,\\\n",
-    "                              periodicity=\"weekly\",\\\n",
-    "                              start_timestamp_ltz=\"2023-02-18 00:00:00 PST\",\\\n",
-    "                              percentage_of_monitor=100,\\\n",
-    "                              action=\"notify\",\\\n",
-    "                              warehouse_name=\"warehouse_1\"):\n",
-    "    \n",
-    "    resource_monitor_sql = tw.dedent(f\"\"\"\n",
-    "                            USE ROLE ACCOUNTADMIN;\n",
-    "                            CREATE OR REPLACE RESOURCE MONITOR {resource_monitor_name} \n",
-    "                            WITH CREDIT_QUOTA={credit_quota}\n",
-    "                            FREQUENCY={periodicity}\n",
-    "                            START_TIMESTAMP={start_timestamp_ltz}\n",
-    "                            TRIGGERS ON {percentage_of_monitor} PERCENT DO {action};\n",
-    "                            ALTER WAREHOUSE {warehouse_name} SET RESOURCE_MONITOR={resource_monitor_name};\n",
-    "                            \"\"\")\n",
-    "    return resource_monitor_sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timedelta\n",
-    "TRAINING_LENGTH = 30\n",
-    "training_start = sdate - timedelta(TRAINING_LENGTH + 1)\n",
-    "training_end = sdate - timedelta(1)\n",
-    "# training_start, training_end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_resource_monitor_values(ts, te):\n",
-    "    df_compute = cqlib.cost_of_compute_ts(ts,te)\n",
-    "    df_compute.drop(df_compute.loc[df_compute['warehouse_name']==\"CLOUD_SERVICES_ONLY\"].index, inplace=True)\n",
-    "    df_by_wh_day = df_compute.groupby([\n",
-    "                 pd.Grouper(key='hourly_start_time', axis=0, freq='D', sort=True),\n",
-    "                 pd.Grouper('warehouse_name')\n",
-    "               ]).sum()\n",
-    "    df_by_wh_day.reset_index(inplace=True)\n",
-    "    df_by_wh_day.rename(columns={\"hourly_start_time\": \"day\"}, errors=\"raise\", inplace=True)\n",
-    "    df_stats_by_wh_day = df_by_wh_day.groupby(\"warehouse_name\")[\"credits\"].agg(['mean', 'std'])\n",
-    "    df_stats_by_wh_day.reset_index(inplace=True)\n",
-    "    df_stats_by_wh_day[\"credits_three_sigma_plus\"] = df_stats_by_wh_day[\"mean\"]+3*df_stats_by_wh_day[\"std\"]\n",
-    "    df_stats_by_wh_day[\"credits_three_sigma_minus\"] = df_stats_by_wh_day[\"mean\"]-3*df_stats_by_wh_day[\"std\"]\n",
-    "    df_stats_by_wh_day[\"credits_three_sigma_minus\"] = df_stats_by_wh_day[\"credits_three_sigma_minus\"].clip(0, None)\n",
-    "    df_stats_by_wh_day = df_stats_by_wh_day.round(2)\n",
-    "    df_stats_by_wh_day.drop(columns=[\"mean\", \"std\"],inplace=True)\n",
-    "    df_stats_by_wh_day.reset_index(inplace=True,drop=True)\n",
-    "    return df_by_wh_day, df_stats_by_wh_day"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_wh, resource_monitor = get_resource_monitor_values(training_start, training_end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resource_monitor_queries = []\n",
-    "for idx, wh_name in enumerate(resource_monitor[\"warehouse_name\"].unique()):\n",
-    "    resource_monitor_name = resource_monitor.loc[idx][\"warehouse_name\"] + '_RESOURCE_MONITOR'\n",
-    "    credit_quota = resource_monitor.loc[idx][\"credits_three_sigma_plus\"]\n",
-    "    start_timestamp_ltz = \"YYYY-MM-DD HH:MM:SS PST\"\n",
-    "    periodicity = \"DAILY\"\n",
-    "    percentage_of_monitor=100\n",
-    "    action=\"NOTIFY\"\n",
-    "    warehouse_name=resource_monitor.loc[idx][\"warehouse_name\"]\n",
-    "    resource_monitor_queries.append(generate_resource_monitor_sql(resource_monitor_name,\\\n",
-    "                              credit_quota,\\\n",
-    "                              periodicity,\\\n",
-    "                              start_timestamp_ltz,\\\n",
-    "                              percentage_of_monitor,\\\n",
-    "                              action,\\\n",
-    "                              warehouse_name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Query templates for you to generate resource monitor for this week\")\n",
-    "for res_mon_q in resource_monitor_queries:\n",
-    "    print(res_mon_q)"
-   ]
   },
   {
    "cell_type": "markdown",
